feat: add get login info
